--- a/hwthon2015/index.html
+++ b/hwthon2015/index.html
@@ -25,6 +25,7 @@
       </div>
     </div>
     <div id="chart_div"></div>
+    <div id="chart_div2"></div>
   </body>
   <script>
     $(function() {
