--- a/webpage/index.html
+++ b/webpage/index.html
@@ -104,13 +104,13 @@
                             <!-- Wrapper for slides -->
                             <div class="carousel-inner" role="listbox">
                                 <div class="active item">
-                                    <img src="img\portfolio\sonicmood.jpg" alt="" class="img-responsive">
+                                    <img src="img\portfolio\sonicmood.png" alt="" class="img-responsive">
                                 </div>
                                 <div class="item">
                                     <img src="img/portfolio/movelek.jpg" alt="" class="img-responsive">
                                 </div>
                                 <div class="item">
-                                    <img src="img/portfolio/misty.jpg" alt="" class="img-responsive">
+                                    <img src="img/portfolio/misty.png" alt="" class="img-responsive">
                                 </div>
                             </div>
                             <!-- Controls -->
