--- a/webpage/hardwarethon.html
+++ b/webpage/hardwarethon.html
@@ -30,13 +30,13 @@
         <a class="w-nav-brand brand logo" href="index.html"><img src="images/imagine.png" height="47">
       </a>
         <nav class="w-nav-menu nav-menu" role="navigation">
-          <a class="w-nav-link nav-link" href="#methodology">XYZ Methodology</a>
+          <a class="w-nav-link nav-link" href="index.html#methodology">XYZ Methodology</a>
           <a href="#services" class="w-nav-link nav-link">services</a>
-          <a class="w-nav-link nav-link" href="#about">about</a>
-          <a class="w-nav-link nav-link" href="#education">education</a>
-          <a class="w-nav-link nav-link" href="hardwarethon.html">hardwarethon</a>
-          <a class="w-nav-link nav-link" href="#testimonials">testimonials</a>
-          <a class="w-nav-link nav-link" href="#contact">contact</a>
+          <a class="w-nav-link nav-link" href="index.html#about">about</a>
+          <a class="w-nav-link nav-link" href="index.html#education">education</a>
+          <a class="w-nav-link nav-link" href="index.htmlhardwarethon.html">hardwarethon</a>
+          <a class="w-nav-link nav-link" href="index.html#testimonials">testimonials</a>
+          <a class="w-nav-link nav-link" href="index.html#contact">contact</a>
         </nav>
         <div class="w-nav-button menu-button">
           <div class="w-icon-nav-menu icon-menu outline"></div>
@@ -48,13 +48,13 @@
         <a class="w-nav-brand" href="index.html"> <img src="images/imagine.png" width="126">
       </a>
         <nav class="w-nav-menu nav-menu" role="navigation">
-          <a class="w-nav-link nav-link" href="#methodology">XYZ Methodology</a>
-          <a class="w-nav-link nav-link" href="#services">services</a>
-          <a class="w-nav-link nav-link" href="#about">about us</a>
-          <a class="w-nav-link nav-link" href="#education">education</a>
+          <a class="w-nav-link nav-link" href="index.html#methodology">XYZ Methodology</a>
+          <a class="w-nav-link nav-link" href="index.html#services">services</a>
+          <a class="w-nav-link nav-link" href="index.html#about">about us</a>
+          <a class="w-nav-link nav-link" href="index.html#education">education</a>
           <a class="w-nav-link nav-link" href="hardwarethon.html">hardwarethon</a>
-          <a class="w-nav-link nav-link" href="#testimonials">testimonials</a>
-          <a class="w-nav-link nav-link" href="#contact">contact us</a>
+          <a class="w-nav-link nav-link" href="index.html#testimonials">testimonials</a>
+          <a class="w-nav-link nav-link" href="index.html#contact">contact us</a>
         </nav>
         <div class="w-nav-button menu-button">
           <div class="w-icon-nav-menu"></div>
@@ -183,40 +183,40 @@
             <div id="carousel2" data-interval="false" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="item active">
-                  <img src="images/hardwarethon/1.JPG">
+                  <img src="images/hardwarethon/1.jpg">
                 </div>
                 <div class="item">
-                  <img src="images/hardwarethon/2.JPG">
+                  <img src="images/hardwarethon/2.jpg">
                 </div>
                 <div class="item">
-                  <img src="images/hardwarethon/3.JPG">
+                  <img src="images/hardwarethon/3.jpg">
                 </div>
                 <div class="item">
-                  <img src="images/hardwarethon/4.JPG">
+                  <img src="images/hardwarethon/4.jpg">
                 </div>
                 <div class="item">
-                  <img src="images/hardwarethon/5.JPG">
+                  <img src="images/hardwarethon/5.jpg">
                 </div>
                 <div class="item">
-                  <img src="images/hardwarethon/6.JPG">
+                  <img src="images/hardwarethon/6.jpg">
                 </div>
                 <div class="item">
-                  <img src="images/hardwarethon/7.JPG">
+                  <img src="images/hardwarethon/7.jpg">
                 </div>
                 <div class="item">
-                  <img src="images/hardwarethon/8.JPG">
+                  <img src="images/hardwarethon/8.jpg">
                 </div>
                 <div class="item">
-                  <img src="images/hardwarethon/9.JPG">
+                  <img src="images/hardwarethon/9.jpg">
                 </div>
                 <div class="item">
-                  <img src="images/hardwarethon/10.JPG">
+                  <img src="images/hardwarethon/10.jpg">
                 </div>
                 <div class="item">
-                  <img src="images/hardwarethon/11.JPG">
+                  <img src="images/hardwarethon/11.jpg">
                 </div>
                 <div class="item">
-                  <img src="images/hardwarethon/12.JPG">
+                  <img src="images/hardwarethon/12.jpg">
                 </div>
                 <div class="item">
                   <img src="images/hardwarethon/13.jpg">
