--- a/webpage/index.html
+++ b/webpage/index.html
@@ -227,7 +227,7 @@
             which share a mission and vision...
             <br>Change the world!</p>
         </div>
-        <div class="w-row small-features-row">
+        <div class="w-row small-features-row center">
           <div class="w-col w-col-4">
             <div class="feature">
               <a class="w-lightbox w-inline-block memberDiv" href="#" id="memberJavier">
@@ -253,7 +253,7 @@
             </div>
           </div>
         </div>
-        <div class="w-row small-features-row">
+        <div class="w-row small-features-row center">
           <div class="w-col w-col-4">
             <div class="feature">
               <a class="w-lightbox w-inline-block memberDiv" href="#" id="memberAdrian">
@@ -336,7 +336,7 @@
               <div class="white">Max. 30 people</div>
               <div class="white">9 Hours</div>
               <div class="white">Lean StartUp</div>
-              <div class="white">Ocean Blue</div>
+              <div class="white">Blue Ocean</div>
               <div class="white">Lean Canvas</div>
               <div class="white">Concepts &amp; Tools</div>
             </div>
