Commit Parrafo Index

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -154,8 +154,7 @@
       <div class="w-container">
         <div>
           <h2 class="white">What we do</h2>
-          <p class="white">We offer you different technological solutions with a high component of
-            innovation, so that satisfy their needs.</p>
+          <p class="white">We offer a variety of technological possibilities to satisfy every customer´s dream.</p>
         </div>
         <div class="w-row menu-row">
           <div class="w-col w-col-4 overall-column" data-ix="service-show">
