--- a/webpage/index.html
+++ b/webpage/index.html
@@ -187,7 +187,7 @@
             <div class="icon-service">
               <img src="images/iconos/icono5.png">
             </div>
-            <h4 class="white">Embeddeb Systems</h4>
+            <h4 class="white">Embedded Systems</h4>
           </div>
           <div class="w-col w-col-4 overall-column" data-ix="service-show-2">
             <div class="icon-service">
