Commit JorgeAbadia Testimonial

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -121,21 +121,21 @@
               <div class="service-box">
                 <img src="images/iconos/pimagine.png" alt="" class="img-responsive center-block">
                 <h3>Imagine Phase</h3>
-                <p class="imagine-gray">Understanding and conceptualizing their needs in solutions.</p>
+                <p class="imagine-gray">Understanding and conceptualizing needs in solutions.</p>
               </div>
             </div>
             <div class="w-col w-col-3 overall-column text-center">
               <div class="service-box">
                 <img src="images/iconos/px.png" alt="" class="img-responsive center-block">
                 <h3>Phase X</h3>
-                <p class="imagine-gray">We develop and validate solutions that satisfy their functional requirements.</p>
+                <p class="imagine-gray">We develop and validate solutions that satisfy functional requirements.</p>
               </div>
             </div>
             <div class="w-col w-col-3 overall-column text-center">
               <div class="service-box">
                 <img src="images/iconos/py.png" alt="" class="img-responsive center-block">
                 <h3>Phase Y</h3>
-                <p class="imagine-gray">We develop and validate solutions that satisfy their needs for usability
+                <p class="imagine-gray">We develop and validate solutions that satisfy needs for usability
                   and user experience.</p>
               </div>
             </div>
@@ -143,7 +143,7 @@
               <div class="service-box">
                 <img src="images/iconos/pz.png" alt="" class="img-responsive center-block">
                 <h3>Phase Z</h3>
-                <p class="imagine-gray">We develop a model of business, marketing and communication for your solution.</p>
+                <p class="imagine-gray">We develop a business model, marketing and communication for your solution.</p>
               </div>
             </div>
           </div>
@@ -286,15 +286,15 @@
           <div class="progressbar">
             <div class="progressbar-label">Software</div>
             <div class="progressbar-bar progress-animate progressbar-bar1" style="background: #e66700;">Java, Java Script, Prolog, Python, C, C#, C++, ASM, TASM, HDL, Verilok
-              y otros</div>
+              &amp; more</div>
           </div>
           <div class="progressbar">
             <div class="progressbar-label">Database</div>
-            <div class="progressbar-bar progress-animate progressbar-bar2" style="background: #00142f;">Mongo, SQL Server, PostgreSQL, MySQL y otros</div>
+            <div class="progressbar-bar progress-animate progressbar-bar2" style="background: #00142f;">Mongo, SQL Server, PostgreSQL, MySQL &amp; more</div>
           </div>
           <div class="progressbar">
             <div class="progressbar-label">Design</div>
-            <div class="progressbar-bar progress-animate progressbar-bar3" style="background: #e66700;">CAD, CAM, CAE, Adobe Suite y otros</div>
+            <div class="progressbar-bar progress-animate progressbar-bar3" style="background: #e66700;">CAD, CAM, CAE, Adobe Suite &amp; more</div>
           </div>
           <div class="progressbar">
             <div class="progressbar-label">Communications Protocol</div>
@@ -304,7 +304,7 @@
           <div class="progressbar">
             <div class="progressbar-label">Hardware</div>
             <div class="progressbar-bar progress-animate progressbar-bar5" style="background: #e66700;">Arduino, Raspberry PI, pcDuino, Edison, PIC, STM32, Beagle Board, Teensy,
-              Tiva/MSP LaunchPads, Xilinx (FPGA, CPLD) y otros</div>
+              Tiva/MSP LaunchPads, Xilinx (FPGA, CPLD) &amp; more</div>
           </div>
         </div>
       </div>
@@ -377,6 +377,12 @@
         <div class="w-slider testimonial-slider" data-animation="slide" data-duration="500" data-infinite="1">
           <div class="w-slider-mask">
             <div class="w-slide testimony-slide">
+              <img class="center-block" width="130" src="images/testimonials/JorgeAbadia.png">
+              <h3 class="imagine-blue">Jorge Abadía</h3>
+              <p class="imagine-blue">CEO Movistar Costa Rica</p>
+              <p class="imagine-blue special2">“Telefónica Movistar has advanced significantly towards becoming a Digital Telco and is now an industry benchmark for innovation. We are convinced that, by promoting an ecosystem of innovation in the country, we generate greater value in terms of the possibilities that technology opens up for people. By supporting the work of Imagine XYZ and initiatives like Hardwarethon, which promote and raise awareness of local talent, we keep moving towards that goal.”</p>
+            </div>
+            <div class="w-slide testimony-slide">
               <img class="center-block" width="130" src="images/testimonials/LuisRosales.png">
               <h3 class="imagine-blue">Luis Carlos Rosales</h3>
               <p class="imagine-blue">ASIC Engineering Program Manager. HP Costa Rica R&amp;D Center.</p>
@@ -386,7 +392,7 @@
                 of products and services with high added value”</p>
             </div>
             <div class="w-slide testimony-slide">
-              <img class="center-block" width="130" src="images/testimonials/JorgeSequeira.jpg">
+              <img class="center-block" width="130" src="images/testimonials/JorgeSequeira.png">
               <h3 class="imagine-blue">Jorge Sequeira</h3>
               <p class="imagine-blue">CEO at Envitech</p>
               <p class="imagine-blue special2">“Imagine XYZ allowed us to discover the world of entrepreneurship, through
