--- a/webpage/index.html
+++ b/webpage/index.html
@@ -285,7 +285,7 @@
         <div class="w-row">
           <div class="progressbar">
             <div class="progressbar-label">Software</div>
-            <div class="progressbar-bar progress-animate progressbar-bar1" style="background: #e66700;">Java, Java Script, Prolog, Python, C, C#, C++, ASM, TASM, HDL, Verilok
+            <div class="progressbar-bar progress-animate progressbar-bar1" style="background: #e66700;">Java, Java Script, Prolog, Python, C, C#, C++, ASM, TASM, HDL, Verilog
               &amp; more</div>
           </div>
           <div class="progressbar">
