Commit #11 GPS Route

--- a/whatsnear/index.html
+++ b/whatsnear/index.html
@@ -97,8 +97,8 @@ function calculateAndDisplayRoute(directionsService, directionsDisplay) {
     origin = {lat: placesDB[0].lat, lng: placesDB[0].long},
     destination = {lat: placesDB[placesDB.length-1].lat, lng: placesDB[placesDB.length-1].long},
     between = Math.floor(placesDB.length/8);
-  for (var i = 1; waypts.length < 8; i+between) {
-    console.log(i+between);
+  for (var i = 1; waypts.length < 8; i += between) {
+    console.log(i);
     waypts.push({
       location: new google.maps.LatLng(placesDB[i].lat, placesDB[i].long),
       stopover: true
@@ -114,7 +114,7 @@ function calculateAndDisplayRoute(directionsService, directionsDisplay) {
     origin: origin,
     destination: destination,
     waypoints: waypts,
-    optimizeWaypoints: false,
+    optimizeWaypoints: true,
     travelMode: google.maps.TravelMode.DRIVING
   }, function(response, status) {
     if (status === google.maps.DirectionsStatus.OK) {
