--- a/whatsnear/index.html
+++ b/whatsnear/index.html
@@ -96,8 +96,8 @@ function calculateAndDisplayRoute(directionsService, directionsDisplay) {
   var waypts = [],
     origin = {lat: placesDB[0].lat, lng: placesDB[0].long},
     destination = {lat: placesDB[placesDB.length-1].lat, lng: placesDB[placesDB.length-1].long},
-    between = Math.floor(placesDB.length/8);
-  for (var i = 1; waypts.length < 8; i += between) {
+    between = Math.floor(placesDB.length/9);
+  for (var i = between; waypts.length < 8; i += between) {
     console.log(i);
     waypts.push({
       location: new google.maps.LatLng(placesDB[i].lat, placesDB[i].long),
