--- a/whatsnear/index.html
+++ b/whatsnear/index.html
@@ -121,6 +121,7 @@ function calculateAndDisplayRoute(directionsService, directionsDisplay) {
           window.alert('Directions request failed due to ' + status);
         }
         waypts = [];
+        num2++;
       });
     }
   }
