--- a/whatsnear/index.html
+++ b/whatsnear/index.html
@@ -47,11 +47,12 @@ function initMap() {
   directionsDisplay.setMap(map);
 
 
-  calculateAndDisplayRoute(directionsService, directionsDisplay, 1);
+  calculateAndDisplayRoute(directionsService, 1);
 }
 
-function calculateAndDisplayRoute(directionsService, directionsDisplay, num) {
-  var waypts = [];
+function calculateAndDisplayRoute(directionsService, num) {
+  var waypts = [],
+    directionsDisplay = new google.maps.DirectionsRenderer({suppressMarkers: false});
   waypts.push({
     location: new google.maps.LatLng(placesDB[num].lat, placesDB[num].long),
     stopover: true
@@ -71,7 +72,7 @@ function calculateAndDisplayRoute(directionsService, directionsDisplay, num) {
   }, function(response, status) {
     if (status === google.maps.DirectionsStatus.OK) {
       directionsDisplay.setDirections(response);
-      setTimeout(calculateAndDisplayRoute, 2000, directionsService, directionsDisplay, num+4);
+      setTimeout(calculateAndDisplayRoute, 2000, directionsService, num+4);
     } else {
       window.alert('Directions request failed due to ' + status);
     }
