--- a/whatsnear/index.html
+++ b/whatsnear/index.html
@@ -48,7 +48,7 @@ function initMap() {
   directionsDisplay.setMap(map);
 
 
-  calculateAndDisplayRoute(directionsService, directionsDisplay, 1);
+  calculateAndDisplayRoute(directionsService, 1);
 }
 
 function renderDirections(result) {
