--- a/whatsnear/index.html
+++ b/whatsnear/index.html
@@ -40,7 +40,7 @@ function checkRoute(){
 
 function initMap() {
   var directionsService = new google.maps.DirectionsService;
-  var directionsDisplay = new google.maps.DirectionsRenderer({suppressMarkers: false});
+  var directionsDisplay = new google.maps.DirectionsRenderer({suppressMarkers: true, suppressInfoWindows:true});
   map = new google.maps.Map(document.getElementById('map'), {
     zoom: 6,
     center: {lat: placesDB[0].lat, lng: placesDB[0].long}
@@ -52,7 +52,7 @@ function initMap() {
 }
 
 function renderDirections(result) {
-  var directionsRenderer = new google.maps.DirectionsRenderer;
+  var directionsRenderer = new google.maps.DirectionsRenderer({suppressMarkers: true, suppressInfoWindows:true});
   directionsRenderer.setMap(map);
   directionsRenderer.setDirections(result);
 }
@@ -79,7 +79,7 @@ function calculateAndDisplayRoute(directionsService, num) {
     if (status === google.maps.DirectionsStatus.OK) {
       renderDirections(response);
       //directionsDisplay.setDirections(response);
-      setTimeout(calculateAndDisplayRoute, 2000, directionsService, num+4);
+      setTimeout(calculateAndDisplayRoute, 1000, directionsService, num+3);
     } else {
       window.alert('Directions request failed due to ' + status);
     }
