--- a/whatsnear/index.html
+++ b/whatsnear/index.html
@@ -42,7 +42,7 @@ function initMap() {
   var directionsService = new google.maps.DirectionsService;
   var directionsDisplay = new google.maps.DirectionsRenderer({suppressMarkers: true, suppressInfoWindows:true});
   map = new google.maps.Map(document.getElementById('map'), {
-    zoom: 6,
+    zoom: 3,
     center: {lat: placesDB[0].lat, lng: placesDB[0].long}
   });
   directionsDisplay.setMap(map);
@@ -58,17 +58,20 @@ function renderDirections(result) {
 }
 
 function calculateAndDisplayRoute(directionsService, num) {
-  var waypts = [];
-  waypts.push({
-    location: new google.maps.LatLng(placesDB[num].lat, placesDB[num].long),
-    stopover: true
-  });
-  waypts.push({
-    location: new google.maps.LatLng(placesDB[num+1].lat, placesDB[num+1].long),
-    stopover: true
-  });
+  var waypts = [],
+    whileStop = true,
+    whileNum = 0;
+  while(whileStop){
+    waypts.push({
+      location: new google.maps.LatLng(placesDB[num].lat, placesDB[num].long),
+      stopover: false
+    });
+    num++;
+    whileNum++;
+    if(whileNum==8 || placesDB.length-1==whileNum) whileStop=false;
+  }
   var origin = {lat: placesDB[num-1].lat, lng: placesDB[num-1].long},
-    destination = {lat: placesDB[num+2].lat, lng: placesDB[num+2].long};
+    destination = {lat: placesDB[num+8].lat, lng: placesDB[num+8].long};
   directionsService.route({
     origin: origin,
     destination: destination,
@@ -78,8 +81,7 @@ function calculateAndDisplayRoute(directionsService, num) {
   }, function(response, status) {
     if (status === google.maps.DirectionsStatus.OK) {
       renderDirections(response);
-      //directionsDisplay.setDirections(response);
-      setTimeout(calculateAndDisplayRoute, 1000, directionsService, num+3);
+      if(num<placesDB.length-1) setTimeout(calculateAndDisplayRoute, 1000, directionsService, num+9);
     } else {
       window.alert('Directions request failed due to ' + status);
     }
