--- a/whatsnear/index.html
+++ b/whatsnear/index.html
@@ -68,10 +68,10 @@ function calculateAndDisplayRoute(directionsService, num) {
     });
     num++;
     whileNum++;
-    if(whileNum==8 || placesDB.length-1==whileNum) whileStop=false;
+    if(whileNum==8 || placesDB.length-2==whileNum) whileStop=false;
   }
-  var origin = {lat: placesDB[num-1].lat, lng: placesDB[num-1].long},
-    destination = {lat: placesDB[num+8].lat, lng: placesDB[num+8].long};
+  var origin = {lat: placesDB[num-9].lat, lng: placesDB[num-9].long},
+    destination = {lat: placesDB[num].lat, lng: placesDB[num].long};
   directionsService.route({
     origin: origin,
     destination: destination,
@@ -81,7 +81,7 @@ function calculateAndDisplayRoute(directionsService, num) {
   }, function(response, status) {
     if (status === google.maps.DirectionsStatus.OK) {
       renderDirections(response);
-      if(num<placesDB.length-1) setTimeout(calculateAndDisplayRoute, 2000, directionsService, num+9);
+      if(num<placesDB.length-1) setTimeout(calculateAndDisplayRoute, 2000, directionsService, num+2);
     } else {
       window.alert('Directions request failed due to ' + status);
     }
