--- a/whatsnear/index.html
+++ b/whatsnear/index.html
@@ -48,7 +48,7 @@ function initMap() {
   directionsDisplay.setMap(map);
 
 
-  calculateAndDisplayRoute(directionsService, 1);
+  calculateAndDisplayRoute(directionsService, 1, false);
 }
 
 function renderDirections(result, markersShow) {
@@ -57,12 +57,11 @@ function renderDirections(result, markersShow) {
   directionsRenderer.setDirections(result);
 }
 
-function calculateAndDisplayRoute(directionsService, num) {
+function calculateAndDisplayRoute(directionsService, num, markersShow) {
   var waypts = [],
     whileStop = true,
     whileNum = 0,
-    numInit = num,
-    markersShow = true;
+    numInit = num;
   while(whileStop){
     waypts.push({
       location: new google.maps.LatLng(placesDB[num].lat, placesDB[num].long),
@@ -73,6 +72,7 @@ function calculateAndDisplayRoute(directionsService, num) {
     if(whileNum==8) whileStop=false;
     if(placesDB.length-2==whileNum){ whileStop=false; console.log("final"); markersShow=false}
   }
+  console.log(placesDB.length-num);
   var origin = {lat: placesDB[numInit].lat, lng: placesDB[numInit].long},
     destination = {lat: placesDB[num].lat, lng: placesDB[num].long};
   directionsService.route({
@@ -84,7 +84,7 @@ function calculateAndDisplayRoute(directionsService, num) {
   }, function(response, status) {
     if (status === google.maps.DirectionsStatus.OK) {
       renderDirections(response, markersShow);
-      if(num<placesDB.length-1) setTimeout(calculateAndDisplayRoute, 2000, directionsService, num+2);
+      if(num<placesDB.length-1) setTimeout(calculateAndDisplayRoute, 2000, directionsService, num+2, true);
     } else {
       window.alert('Directions request failed due to ' + status);
     }
